--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '3.3.4'
 
+
+		implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+
+
+
 }
 
 tasks.named('test') {
