--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,12 @@ dependencies {
 
 
 		implementation 'com.fasterxml.jackson.core:jackson-databind'
-
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.6'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.3.5'
 
 
 
